fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -236,6 +236,9 @@ footer img {
 	    clear: both;
 	    width: 100%;
 	}
+	.bg-peach .fc-white{
+		color:#FFF;
+	}
 	form .input-group.text-right {
 	    text-align: center !important;
 	}
